# book-crew

./: .env  pyproject.toml  streamlit.py
src/book_crew/: __init__.py  agents.py  main.py  tasks.py
